syntax = "proto3";

package proto;

option go_package = "github.com/msmkdenis/yap-infokeeper/internal/credential/api/grpchandlers/proto";

message PostCredentialRequest {
  string uuid = 1;
  string login = 2;
  string password = 3;
  string metadata = 4;
}

message PostCredentialResponse {}

message Credential {
  string login = 1;
  string password = 2;
  string created_at = 3;
  string metadata = 4;
}

message GetCredentialRequest {
  string login = 1;
  string password = 2;
  string metadata = 3;
}

message GetCredentialResponse {
  repeated Credential cards = 1;
}

service CredentialService {
  rpc PostSaveCredential(PostCredentialRequest) returns (PostCredentialResponse);
  rpc GetLoadCredentials(GetCredentialRequest) returns (GetCredentialResponse);
}